# fridafier

./: .gitignore  LICENSE  README.md  fridafier  pyproject.toml
src/: fridadownloader.py  patcher.py
